--- a/style.css
+++ b/style.css
@@ -1,5 +1,73 @@
-* {
-    box-sizing: border-box;
+
+
+header, footer {
+    padding: 0.5em;
+    color: lightpink;
+    background-color: gray;
+    }
+    h1.header {
+        padding: 0;
+        margin: 0;
+    }   
+  nav {
+    background-color: lightpink;
+    display:inline-flex;
+  }
+  
+  nav ul {
+    list-style: none;
+    display: inline-flex;
+    justify-content: center;
+  }
+  
+  nav li {
+  
+    display: inline-flex;
+  }
+  
+  nav a {
+    display: block;
+    padding: 14px 20px;
+    color: grey;
+    text-decoration: none;
+  }
+  
+  nav a.active, nav a:hover {
+    background-color:whitesmoke;
+  }
+  aside {
+    float: left;
+    width: 160px;
     margin: 0;
-    padding: 0;
-}
+    padding: 1em;
+    }
+    section {
+    margin-left: 190px;
+    border-left: 1px solid gray;
+    padding: 1em;
+    }
+    ul {
+    float:left;
+    width:100%;
+    padding:0;
+    margin:0;
+    list-style-type:none;
+    }
+    a {
+    float:left;
+    width:6em;
+    text-decoration:none;
+    color:grey;
+    background-color:lightpink;
+    padding:0.2em 0.6em;
+    border-right:1px solid white;
+    }
+    
+  
+
+  footer {
+    background-color: gray;
+    color:lightpink;
+    text-align: center;
+    padding: 10px;
+  }
